@@ -3,6 +3,8 @@ CHANGES.txt - 2008-09-03
 
 CHANGES IN CUPS V1.4b1
 
+	- The scheduler now supports a DefaultPaperSize directive
+	  (STR #2848)
 	- The scheduler now passes the job-originating-host-name
 	  value to filters in the options argument (STR #2558)
 	- CUPS now supports job tickets in PDF files (STR #2903)
